--- a/frontend/index.html
+++ b/frontend/index.html
@@ -442,7 +442,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'https://romc-bnk.global-desk.top/api';
+        const API_BASE_URL = 'http://localhost:3000';
         const ALLOWED_CLASSES = [
             "Sorcerer", "Warlock", "Archbishop", "Shura", "Hunter", "Minstrel",
             "Wanderer", "Rune Knight", "Royal Guard", "Shadow Chaser",
